skia_core_sources = [
  "../src/core/ARGB32_Clamp_Bilinear_BitmapShader.h"
  "../src/core/SkAAClip.cpp"
  "../src/core/SkAnnotation.cpp"
  "../src/core/SkAdvancedTypefaceMetrics.cpp"
  "../src/core/SkAlphaRuns.cpp"
  "../src/core/SkAntiRun.h"
  "../src/core/SkBBoxHierarchy.h"
  "../src/core/SkBBoxRecord.cpp"
  "../src/core/SkBBoxRecord.h"
  "../src/core/SkBBoxHierarchyRecord.cpp"
  "../src/core/SkBBoxHierarchyRecord.h"
  "../src/core/SkBitmap.cpp"
  "../src/core/SkBitmapDevice.cpp"
  "../src/core/SkBitmapFilter.h"
  "../src/core/SkBitmapFilter.cpp"
  "../src/core/SkBitmapHeap.cpp"
  "../src/core/SkBitmapHeap.h"
  "../src/core/SkBitmapProcShader.cpp"
  "../src/core/SkBitmapProcShader.h"
  "../src/core/SkBitmapProcState.cpp"
  "../src/core/SkBitmapProcState.h"
  "../src/core/SkBitmapProcState_matrix.h"
  "../src/core/SkBitmapProcState_matrixProcs.cpp"
  "../src/core/SkBitmapProcState_sample.h"
  "../src/core/SkBitmapScaler.h"
  "../src/core/SkBitmapScaler.cpp"
  "../src/core/SkBitmapShader16BilerpTemplate.h"
  "../src/core/SkBitmapShaderTemplate.h"
  "../src/core/SkBitmap_scroll.cpp"
  "../src/core/SkBlitBWMaskTemplate.h"
  "../src/core/SkBlitMask_D32.cpp"
  "../src/core/SkBlitRow_D16.cpp"
  "../src/core/SkBlitRow_D32.cpp"
  "../src/core/SkBlitter.h"
  "../src/core/SkBlitter.cpp"
  "../src/core/SkBlitter_A8.cpp"
  "../src/core/SkBlitter_ARGB32.cpp"
  "../src/core/SkBlitter_RGB16.cpp"
  "../src/core/SkBlitter_Sprite.cpp"
  "../src/core/SkBuffer.cpp"
  "../src/core/SkCanvas.cpp"
  "../src/core/SkChunkAlloc.cpp"
  "../src/core/SkClipStack.cpp"
  "../src/core/SkColor.cpp"
  "../src/core/SkColorFilter.cpp"
  "../src/core/SkColorTable.cpp"
  "../src/core/SkComposeShader.cpp"
  "../src/core/SkConfig8888.cpp"
  "../src/core/SkConfig8888.h"
  "../src/core/SkConvolver.cpp"
  "../src/core/SkConvolver.h"
  "../src/core/SkCoreBlitters.h"
  "../src/core/SkCubicClipper.cpp"
  "../src/core/SkCubicClipper.h"
  "../src/core/SkData.cpp"
  "../src/core/SkDataTable.cpp"
  "../src/core/SkDebug.cpp"
  "../src/core/SkDeque.cpp"
  "../src/core/SkDevice.cpp"
  "../src/core/SkDeviceLooper.cpp"
  "../src/core/SkDeviceProfile.cpp"
  "../src/lazy/SkDiscardableMemoryPool.cpp"
  "../src/lazy/SkDiscardablePixelRef.cpp"
  "../src/core/SkDistanceFieldGen.cpp"
  "../src/core/SkDistanceFieldGen.h"
  "../src/core/SkDither.cpp"
  "../src/core/SkDraw.cpp"
  "../src/core/SkDrawLooper.cpp"
  "../src/core/SkDrawProcs.h"
  "../src/core/SkEdgeBuilder.cpp"
  "../src/core/SkEdgeClipper.cpp"
  "../src/core/SkEdge.cpp"
  "../src/core/SkEdge.h"
  "../src/core/SkError.cpp"
  "../src/core/SkErrorInternals.h"
  "../src/core/SkFilterProc.cpp"
  "../src/core/SkFilterProc.h"
  "../src/core/SkFilterShader.cpp"
  "../src/core/SkFlattenable.cpp"
  "../src/core/SkFlattenableSerialization.cpp"
  "../src/core/SkFloat.cpp"
  "../src/core/SkFloat.h"
  "../src/core/SkFloatBits.cpp"
  "../src/core/SkFontHost.cpp"
  "../src/core/SkFontDescriptor.cpp"
  "../src/core/SkFontDescriptor.h"
  "../src/core/SkFontStream.cpp"
  "../src/core/SkFontStream.h"
  "../src/core/SkGeometry.cpp"
  "../src/core/SkGlyphCache.cpp"
  "../src/core/SkGlyphCache.h"
  "../src/core/SkGlyphCache_Globals.h"
  "../src/core/SkGraphics.cpp"
  "../src/core/SkInstCnt.cpp"
  "../src/core/SkImageFilter.cpp"
  "../src/core/SkImageInfo.cpp"
  "../src/core/SkLineClipper.cpp"
  "../src/core/SkMallocPixelRef.cpp"
  "../src/core/SkMask.cpp"
  "../src/core/SkMaskFilter.cpp"
  "../src/core/SkMaskGamma.cpp"
  "../src/core/SkMaskGamma.h"
  "../src/core/SkMath.cpp"
  "../src/core/SkMatrix.cpp"
  "../src/core/SkMatrixClipStateMgr.cpp"
  "../src/core/SkMatrixClipStateMgr.h"
  "../src/core/SkMessageBus.h"
  "../src/core/SkMetaData.cpp"
  "../src/core/SkMipMap.cpp"
  "../src/core/SkOffsetTable.h"
  "../src/core/SkPackBits.cpp"
  "../src/core/SkPaint.cpp"
  "../src/core/SkPaintOptionsAndroid.cpp"
  "../src/core/SkPaintPriv.cpp"
  "../src/core/SkPaintPriv.h"
  "../src/core/SkPath.cpp"
  "../src/core/SkPathEffect.cpp"
  "../src/core/SkPathHeap.cpp"
  "../src/core/SkPathHeap.h"
  "../src/core/SkPathMeasure.cpp"
  "../src/core/SkPathRef.cpp"
  "../src/core/SkPicture.cpp"
  "../src/core/SkPictureFlat.cpp"
  "../src/core/SkPictureFlat.h"
  "../src/core/SkPicturePlayback.cpp"
  "../src/core/SkPicturePlayback.h"
  "../src/core/SkPictureRecord.cpp"
  "../src/core/SkPictureRecord.h"
  "../src/core/SkPictureStateTree.cpp"
  "../src/core/SkPictureStateTree.h"
  "../src/core/SkPixelRef.cpp"
  "../src/core/SkPoint.cpp"
  "../src/core/SkProcSpriteBlitter.cpp"
  "../src/core/SkPtrRecorder.cpp"
  "../src/core/SkQuadClipper.cpp"
  "../src/core/SkQuadClipper.h"
  "../src/core/SkQuadTree.cpp"
  "../src/core/SkQuadTree.h"
  "../src/core/SkQuadTreePicture.cpp"
  "../src/core/SkQuadTreePicture.h"
  "../src/core/SkRasterClip.cpp"
  "../src/core/SkRasterizer.cpp"
  "../src/core/SkReadBuffer.cpp"
  "../src/core/SkRect.cpp"
  "../src/core/SkRefDict.cpp"
  "../src/core/SkRegion.cpp"
  "../src/core/SkRegionPriv.h"
  "../src/core/SkRegion_path.cpp"
  "../src/core/SkRRect.cpp"
  "../src/core/SkRTree.h"
  "../src/core/SkRTree.cpp"
  "../src/core/SkScaledImageCache.cpp"
  "../src/core/SkScalar.cpp"
  "../src/core/SkScalerContext.cpp"
  "../src/core/SkScalerContext.h"
  "../src/core/SkScan.cpp"
  "../src/core/SkScan.h"
  "../src/core/SkScanPriv.h"
  "../src/core/SkScan_AntiPath.cpp"
  "../src/core/SkScan_Antihair.cpp"
  "../src/core/SkScan_Hairline.cpp"
  "../src/core/SkScan_Path.cpp"
  "../src/core/SkShader.cpp"
  "../src/core/SkSpriteBlitter_ARGB32.cpp"
  "../src/core/SkSpriteBlitter_RGB16.cpp"
  "../src/core/SkSinTable.h"
  "../src/core/SkSpriteBlitter.h"
  "../src/core/SkSpriteBlitterTemplate.h"
  "../src/core/SkStream.cpp"
  "../src/core/SkString.cpp"
  "../src/core/SkStringUtils.cpp"
  "../src/core/SkStroke.h"
  "../src/core/SkStroke.cpp"
  "../src/core/SkStrokeRec.cpp"
  "../src/core/SkStrokerPriv.cpp"
  "../src/core/SkStrokerPriv.h"
  "../src/core/SkTextFormatParams.h"
  "../src/core/SkTileGrid.cpp"
  "../src/core/SkTileGrid.h"
  "../src/core/SkTileGridPicture.cpp"
  "../src/core/SkTLList.h"
  "../src/core/SkTLS.cpp"
  "../src/core/SkTraceEvent.h"
  "../src/core/SkTSearch.cpp"
  "../src/core/SkTSort.h"
  "../src/core/SkTypeface.cpp"
  "../src/core/SkTypefaceCache.cpp"
  "../src/core/SkTypefaceCache.h"
  "../src/core/SkUnPreMultiply.cpp"
  "../src/core/SkUtils.cpp"
  "../src/core/SkValidatingReadBuffer.cpp"
  "../src/core/SkWriteBuffer.cpp"
  "../src/core/SkWriter32.cpp"
  "../src/core/SkXfermode.cpp"

  "../src/doc/SkDocument.cpp"

  "../src/image/SkImage.cpp"
  "../src/image/SkImagePriv.cpp"
  "../src/image/SkImage_Codec.cpp"
  # "../src/image/SkImage_Gpu.cpp"
  "../src/image/SkImage_Picture.cpp"
  "../src/image/SkImage_Raster.cpp"
  "../src/image/SkSurface.cpp"
  # "../src/image/SkSurface_Gpu.cpp"
  "../src/image/SkSurface_Picture.cpp"
  "../src/image/SkSurface_Raster.cpp"

  "../src/pipe/SkGPipeRead.cpp"
  "../src/pipe/SkGPipeWrite.cpp"

  "../src/include/core/SkAdvancedTypefaceMetrics.h"
  "../src/include/core/SkBitmap.h"
  "../src/include/core/SkBitmapDevice.h"
  "../src/include/core/SkBlitRow.h"
  "../src/include/core/SkBounder.h"
  "../src/include/core/SkCanvas.h"
  "../src/include/core/SkChecksum.h"
  "../src/include/core/SkChunkAlloc.h"
  "../src/include/core/SkClipStack.h"
  "../src/include/core/SkColor.h"
  "../src/include/core/SkColorFilter.h"
  "../src/include/core/SkColorPriv.h"
  "../src/include/core/SkColorShader.h"
  "../src/include/core/SkComposeShader.h"
  "../src/include/core/SkData.h"
  "../src/include/core/SkDeque.h"
  "../src/include/core/SkDevice.h"
  "../src/include/core/SkDeviceProperties.h"
  "../src/include/core/SkDither.h"
  "../src/include/core/SkDraw.h"
  "../src/include/core/SkDrawFilter.h"
  "../src/include/core/SkDrawLooper.h"
  "../src/include/core/SkEndian.h"
  "../src/include/core/SkError.h"
  "../src/include/core/SkFixed.h"
  "../src/include/core/SkFlattenable.h"
  "../src/include/core/SkFlattenableSerialization.h"
  "../src/include/core/SkFloatBits.h"
  "../src/include/core/SkFloatingPoint.h"
  "../src/include/core/SkFontHost.h"
  "../src/include/core/SkGeometry.h"
  "../src/include/core/SkGraphics.h"
  "../src/include/core/SkImageDecoder.h"
  "../src/include/core/SkImageEncoder.h"
  "../src/include/core/SkImageFilter.h"
  "../src/include/core/SkImageInfo.h"
  "../src/include/core/SkInstCnt.h"
  "../src/include/core/SkMallocPixelRef.h"
  "../src/include/core/SkMask.h"
  "../src/include/core/SkMaskFilter.h"
  "../src/include/core/SkMath.h"
  "../src/include/core/SkMatrix.h"
  "../src/include/core/SkMetaData.h"
  "../src/include/core/SkOnce.h"
  "../src/include/core/SkOSFile.h"
  "../src/include/core/SkPackBits.h"
  "../src/include/core/SkPaint.h"
  "../src/include/core/SkPath.h"
  "../src/include/core/SkPathEffect.h"
  "../src/include/core/SkPathMeasure.h"
  "../src/include/core/SkPathRef.h"
  "../src/include/core/SkPicture.h"
  "../src/include/core/SkPixelRef.h"
  "../src/include/core/SkPoint.h"
  "../src/include/core/SkPreConfig.h"
  "../src/include/core/SkRasterizer.h"
  "../src/include/core/SkReader32.h"
  "../src/include/core/SkRect.h"
  "../src/include/core/SkRefCnt.h"
  "../src/include/core/SkRegion.h"
  "../src/include/core/SkRRect.h"
  "../src/include/core/SkScalar.h"
  "../src/include/core/SkShader.h"
  "../src/include/core/SkStream.h"
  "../src/include/core/SkString.h"
  "../src/include/core/SkStringUtils.h"
  "../src/include/core/SkStrokeRec.h"
  "../src/include/core/SkTArray.h"
  "../src/include/core/SkTDArray.h"
  "../src/include/core/SkTDStack.h"
  "../src/include/core/SkTDict.h"
  "../src/include/core/SkTInternalLList.h"
  "../src/include/core/SkTileGridPicture.h"
  "../src/include/core/SkTRegistry.h"
  "../src/include/core/SkTSearch.h"
  "../src/include/core/SkTemplates.h"
  "../src/include/core/SkThread.h"
  "../src/include/core/SkTime.h"
  "../src/include/core/SkTLazy.h"
  "../src/include/core/SkTrace.h"
  "../src/include/core/SkTypeface.h"
  "../src/include/core/SkTypes.h"
  "../src/include/core/SkUnPreMultiply.h"
  "../src/include/core/SkUnitMapper.h"
  "../src/include/core/SkUtils.h"
  "../src/include/core/SkWeakRefCnt.h"
  "../src/include/core/SkWriter32.h"
  "../src/include/core/SkXfermode.h"

  # Lazy decoding:
  "../src/lazy/SkCachingPixelRef.cpp"
  "../src/lazy/SkCachingPixelRef.h"

   # Path ops
  "../src/include/pathops/SkPathOps.h"

  "../src/pathops/SkAddIntersections.cpp"
  "../src/pathops/SkDCubicIntersection.cpp"
  "../src/pathops/SkDCubicLineIntersection.cpp"
  "../src/pathops/SkDCubicToQuads.cpp"
  "../src/pathops/SkDLineIntersection.cpp"
  "../src/pathops/SkDQuadImplicit.cpp"
  "../src/pathops/SkDQuadIntersection.cpp"
  "../src/pathops/SkDQuadLineIntersection.cpp"
  "../src/pathops/SkIntersections.cpp"
  "../src/pathops/SkOpAngle.cpp"
  "../src/pathops/SkOpContour.cpp"
  "../src/pathops/SkOpEdgeBuilder.cpp"
  "../src/pathops/SkOpSegment.cpp"
  "../src/pathops/SkPathOpsBounds.cpp"
  "../src/pathops/SkPathOpsCommon.cpp"
  "../src/pathops/SkPathOpsCubic.cpp"
  "../src/pathops/SkPathOpsDebug.cpp"
  "../src/pathops/SkPathOpsLine.cpp"
  "../src/pathops/SkPathOpsOp.cpp"
  "../src/pathops/SkPathOpsPoint.cpp"
  "../src/pathops/SkPathOpsQuad.cpp"
  "../src/pathops/SkPathOpsRect.cpp"
  "../src/pathops/SkPathOpsSimplify.cpp"
  "../src/pathops/SkPathOpsTriangle.cpp"
  "../src/pathops/SkPathOpsTypes.cpp"
  "../src/pathops/SkPathWriter.cpp"
  "../src/pathops/SkQuarticRoot.cpp"
  "../src/pathops/SkReduceOrder.cpp"
  "../src/pathops/SkAddIntersections.h"
  "../src/pathops/SkDQuadImplicit.h"
  "../src/pathops/SkIntersectionHelper.h"
  "../src/pathops/SkIntersections.h"
  "../src/pathops/SkLineParameters.h"
  "../src/pathops/SkOpAngle.h"
  "../src/pathops/SkOpContour.h"
  "../src/pathops/SkOpEdgeBuilder.h"
  "../src/pathops/SkOpSegment.h"
  "../src/pathops/SkOpSpan.h"
  "../src/pathops/SkPathOpsBounds.h"
  "../src/pathops/SkPathOpsCommon.h"
  "../src/pathops/SkPathOpsCubic.h"
  "../src/pathops/SkPathOpsCurve.h"
  "../src/pathops/SkPathOpsDebug.h"
  "../src/pathops/SkPathOpsLine.h"
  "../src/pathops/SkPathOpsPoint.h"
  "../src/pathops/SkPathOpsQuad.h"
  "../src/pathops/SkPathOpsRect.h"
  "../src/pathops/SkPathOpsTriangle.h"
  "../src/pathops/SkPathOpsTypes.h"
  "../src/pathops/SkPathWriter.h"
  "../src/pathops/SkQuarticRoot.h"
  "../src/pathops/SkReduceOrder.h"
]