

libfontconfig_sources = [
  "../third_party/externals/fontconfig/src/fcatomic.c"
  "../third_party/externals/fontconfig/src/fcblanks.c"
  "../third_party/externals/fontconfig/src/fccache.c"
  "../third_party/externals/fontconfig/src/fccfg.c"
  "../third_party/externals/fontconfig/src/fccharset.c"
  "../third_party/externals/fontconfig/src/fccompat.c"
  "../third_party/externals/fontconfig/src/fcdbg.c"
  "../third_party/externals/fontconfig/src/fcdefault.c"
  "../third_party/externals/fontconfig/src/fcdir.c"
  "../third_party/externals/fontconfig/src/fcfreetype.c"
  "../third_party/externals/fontconfig/src/fcfs.c"
  "../third_party/externals/fontconfig/src/fchash.c"
  "../third_party/externals/fontconfig/src/fcinit.c"
  "../third_party/externals/fontconfig/src/fclang.c"
  "../third_party/externals/fontconfig/src/fclist.c"
  "../third_party/externals/fontconfig/src/fcmatch.c"
  "../third_party/externals/fontconfig/src/fcmatrix.c"
  "../third_party/externals/fontconfig/src/fcname.c"
  "../third_party/externals/fontconfig/src/fcobjs.c"
  "../third_party/externals/fontconfig/src/fcpat.c"
  "../third_party/externals/fontconfig/src/fcserialize.c"
  "../third_party/externals/fontconfig/src/fcstat.c"
  "../third_party/externals/fontconfig/src/fcstr.c"
  "../third_party/externals/fontconfig/src/fcxml.c"
  "../third_party/externals/fontconfig/src/ftglue.c"
]