skia_gpu_sources = [
  "../include/gpu/GrBackendEffectFactory.h"
  "../include/gpu/GrClipData.h"
  "../include/gpu/GrColor.h"
  "../include/gpu/GrConfig.h"
  "../include/gpu/GrContext.h"
  "../include/gpu/GrContextFactory.h"
  "../include/gpu/GrCoordTransform.h"
  "../include/gpu/GrEffect.h"
  "../include/gpu/GrEffectStage.h"
  "../include/gpu/GrEffectUnitTest.h"
  "../include/gpu/GrFontScaler.h"
  "../include/gpu/GrGlyph.h"
  "../include/gpu/GrKey.h"
  "../include/gpu/GrPaint.h"
  "../include/gpu/GrPathRendererChain.h"
  "../include/gpu/GrPoint.h"
  "../include/gpu/GrRect.h"
  "../include/gpu/GrRenderTarget.h"
  "../include/gpu/GrResource.h"
  "../include/gpu/GrSurface.h"
  "../include/gpu/GrTBackendEffectFactory.h"
  "../include/gpu/GrTexture.h"
  "../include/gpu/GrTextureAccess.h"
  "../include/gpu/GrTypes.h"
  "../include/gpu/GrUserConfig.h"

  "../include/gpu/gl/GrGLConfig.h"
  "../include/gpu/gl/GrGLExtensions.h"
  "../include/gpu/gl/GrGLFunctions.h"
  "../include/gpu/gl/GrGLInterface.h"

  "../src/gpu/GrAAHairLinePathRenderer.cpp"
  "../src/gpu/GrAAHairLinePathRenderer.h"
  "../src/gpu/GrAAConvexPathRenderer.cpp"
  "../src/gpu/GrAAConvexPathRenderer.h"
  "../src/gpu/GrAARectRenderer.cpp"
  "../src/gpu/GrAARectRenderer.h"
  "../src/gpu/GrAddPathRenderers_default.cpp"
  "../src/gpu/GrAllocator.h"
  "../src/gpu/GrAllocPool.h"
  "../src/gpu/GrAllocPool.cpp"
  "../src/gpu/GrAtlas.cpp"
  "../src/gpu/GrAtlas.h"
  "../src/gpu/GrBinHashKey.h"
  "../src/gpu/GrBitmapTextContext.cpp"
  "../src/gpu/GrBitmapTextContext.h"
  "../src/gpu/GrBlend.cpp"
  "../src/gpu/GrBlend.h"
  "../src/gpu/GrBufferAllocPool.cpp"
  "../src/gpu/GrBufferAllocPool.h"
  "../src/gpu/GrCacheID.cpp"
  "../src/gpu/GrClipData.cpp"
  "../src/gpu/GrContext.cpp"
  "../src/gpu/GrDefaultPathRenderer.cpp"
  "../src/gpu/GrDefaultPathRenderer.h"
  "../src/gpu/GrDistanceFieldTextContext.h"
  "../src/gpu/GrDistanceFieldTextContext.cpp"
  "../src/gpu/GrDrawState.cpp"
  "../src/gpu/GrDrawState.h"
  "../src/gpu/GrDrawTarget.cpp"
  "../src/gpu/GrDrawTarget.h"
  "../src/gpu/GrDrawTargetCaps.h"
  "../src/gpu/GrEffect.cpp"
  "../src/gpu/GrGeometryBuffer.h"
  "../src/gpu/GrClipMaskCache.h"
  "../src/gpu/GrClipMaskCache.cpp"
  "../src/gpu/GrClipMaskManager.h"
  "../src/gpu/GrClipMaskManager.cpp"
  "../src/gpu/GrGpu.cpp"
  "../src/gpu/GrGpu.h"
  "../src/gpu/GrGpuFactory.cpp"
  "../src/gpu/GrIndexBuffer.h"
  "../src/gpu/GrInOrderDrawBuffer.cpp"
  "../src/gpu/GrInOrderDrawBuffer.h"
  "../src/gpu/GrMemoryPool.cpp"
  "../src/gpu/GrMemoryPool.h"
  "../src/gpu/GrOrderedSet.h"
  "../src/gpu/GrOvalRenderer.cpp"
  "../src/gpu/GrOvalRenderer.h"
  "../src/gpu/GrPaint.cpp"
  "../src/gpu/GrPath.cpp"
  "../src/gpu/GrPath.h"
  "../src/gpu/GrPathRendererChain.cpp"
  "../src/gpu/GrPathRenderer.cpp"
  "../src/gpu/GrPathRenderer.h"
  "../src/gpu/GrPathUtils.cpp"
  "../src/gpu/GrPathUtils.h"
  "../src/gpu/GrPlotMgr.h"
  "../src/gpu/GrRectanizer.cpp"
  "../src/gpu/GrRectanizer.h"
  "../src/gpu/GrRectanizer_skyline.cpp"
  "../src/gpu/GrRedBlackTree.h"
  "../src/gpu/GrRenderTarget.cpp"
  "../src/gpu/GrReducedClip.cpp"
  "../src/gpu/GrReducedClip.h"
  "../src/gpu/GrResource.cpp"
  "../src/gpu/GrResourceCache.cpp"
  "../src/gpu/GrResourceCache.h"
  "../src/gpu/GrStencil.cpp"
  "../src/gpu/GrStencil.h"
  "../src/gpu/GrStencilAndCoverPathRenderer.cpp"
  "../src/gpu/GrStencilAndCoverPathRenderer.h"
  "../src/gpu/GrStencilBuffer.cpp"
  "../src/gpu/GrStencilBuffer.h"
  "../src/gpu/GrTBSearch.h"
  "../src/gpu/GrSWMaskHelper.cpp"
  "../src/gpu/GrSWMaskHelper.h"
  "../src/gpu/GrSoftwarePathRenderer.cpp"
  "../src/gpu/GrSoftwarePathRenderer.h"
  "../src/gpu/GrSurface.cpp"
  "../src/gpu/GrTemplates.h"
  "../src/gpu/GrTextContext.cpp"
  "../src/gpu/GrTextContext.h"
  "../src/gpu/GrTextStrike.cpp"
  "../src/gpu/GrTextStrike.h"
  "../src/gpu/GrTextStrike_impl.h"
  "../src/gpu/GrTexture.cpp"
  "../src/gpu/GrTextureAccess.cpp"
  "../src/gpu/GrTHashTable.h"
  "../src/gpu/GrVertexBuffer.h"

  "../src/gpu/effects/Gr1DKernelEffect.h"
  "../src/gpu/effects/GrConfigConversionEffect.cpp"
  "../src/gpu/effects/GrConfigConversionEffect.h"
  "../src/gpu/effects/GrBezierEffect.cpp"
  "../src/gpu/effects/GrBezierEffect.h"
  "../src/gpu/effects/GrConvolutionEffect.cpp"
  "../src/gpu/effects/GrConvolutionEffect.h"
  "../src/gpu/effects/GrConvexPolyEffect.cpp"
  "../src/gpu/effects/GrConvexPolyEffect.h"
  "../src/gpu/effects/GrBicubicEffect.cpp"
  "../src/gpu/effects/GrBicubicEffect.h"
  "../src/gpu/effects/GrCustomCoordsTextureEffect.cpp"
  "../src/gpu/effects/GrCustomCoordsTextureEffect.h"
  "../src/gpu/effects/GrDistanceFieldTextureEffect.cpp"
  "../src/gpu/effects/GrDistanceFieldTextureEffect.h"
  "../src/gpu/effects/GrRRectEffect.cpp"
  "../src/gpu/effects/GrRRectEffect.h"
  "../src/gpu/effects/GrSimpleTextureEffect.cpp"
  "../src/gpu/effects/GrSimpleTextureEffect.h"
  "../src/gpu/effects/GrSingleTextureEffect.cpp"
  "../src/gpu/effects/GrSingleTextureEffect.h"
  "../src/gpu/effects/GrTextureDomain.cpp"
  "../src/gpu/effects/GrTextureDomain.h"
  "../src/gpu/effects/GrTextureStripAtlas.cpp"
  "../src/gpu/effects/GrTextureStripAtlas.h"

  "../src/gpu/gl/GrGLBufferImpl.cpp"
  "../src/gpu/gl/GrGLBufferImpl.h"
  "../src/gpu/gl/GrGLCaps.cpp"
  "../src/gpu/gl/GrGLCaps.h"
  "../src/gpu/gl/GrGLContext.cpp"
  "../src/gpu/gl/GrGLContext.h"
  "../src/gpu/gl/GrGLCreateNativeInterface_none.cpp"
  "../src/gpu/gl/GrGLDefaultInterface_none.cpp"
  "../src/gpu/gl/GrGLDefines.h"
  "../src/gpu/gl/GrGLEffect.h"
  "../src/gpu/gl/GrGLVertexEffect.h"
  "../src/gpu/gl/GrGLExtensions.cpp"
  "../src/gpu/gl/GrGLIndexBuffer.cpp"
  "../src/gpu/gl/GrGLIndexBuffer.h"
  "../src/gpu/gl/GrGLInterface.cpp"
  "../src/gpu/gl/GrGLIRect.h"
  "../src/gpu/gl/GrGLNoOpInterface.cpp"
  "../src/gpu/gl/GrGLNoOpInterface.h"
  "../src/gpu/gl/GrGLPath.cpp"
  "../src/gpu/gl/GrGLPath.h"
  "../src/gpu/gl/GrGLProgram.cpp"
  "../src/gpu/gl/GrGLProgram.h"
  "../src/gpu/gl/GrGLProgramDesc.cpp"
  "../src/gpu/gl/GrGLProgramDesc.h"
  "../src/gpu/gl/GrGLProgramEffects.cpp"
  "../src/gpu/gl/GrGLProgramEffects.h"
  "../src/gpu/gl/GrGLRenderTarget.cpp"
  "../src/gpu/gl/GrGLRenderTarget.h"
  "../src/gpu/gl/GrGLShaderBuilder.cpp"
  "../src/gpu/gl/GrGLShaderBuilder.h"
  "../src/gpu/gl/GrGLShaderVar.h"
  "../src/gpu/gl/GrGLSL.cpp"
  "../src/gpu/gl/GrGLSL.h"
  "../src/gpu/gl/GrGLSL_impl.h"
  "../src/gpu/gl/GrGLStencilBuffer.cpp"
  "../src/gpu/gl/GrGLStencilBuffer.h"
  "../src/gpu/gl/GrGLTexture.cpp"
  "../src/gpu/gl/GrGLTexture.h"
  "../src/gpu/gl/GrGLUtil.cpp"
  "../src/gpu/gl/GrGLUtil.h"
  "../src/gpu/gl/GrGLUniformManager.cpp"
  "../src/gpu/gl/GrGLUniformManager.h"
  "../src/gpu/gl/GrGLUniformHandle.h"
  "../src/gpu/gl/GrGLVertexArray.cpp"
  "../src/gpu/gl/GrGLVertexArray.h"
  "../src/gpu/gl/GrGLVertexBuffer.cpp"
  "../src/gpu/gl/GrGLVertexBuffer.h"
  "../src/gpu/gl/GrGpuGL.cpp"
  "../src/gpu/gl/GrGpuGL.h"
  "../src/gpu/gl/GrGpuGL_program.cpp"

  # Sk files
  "../include/gpu/SkGpuDevice.h"
  "../include/gpu/SkGr.h"
  "../include/gpu/SkGrPixelRef.h"
  "../include/gpu/SkGrTexturePixelRef.h"

  "../include/gpu/gl/SkGLContextHelper.h"

  "../src/gpu/SkGpuDevice.cpp"
  "../src/gpu/SkGr.cpp"
  "../src/gpu/SkGrFontScaler.cpp"
  "../src/gpu/SkGrPixelRef.cpp"
  "../src/gpu/SkGrTexturePixelRef.cpp"

  "../src/image/SkImage_Gpu.cpp"
  "../src/image/SkSurface_Gpu.cpp"

  "../src/gpu/gl/SkGLContextHelper.cpp"
]

skgpu_native_gl_sources = [
  "../src/gpu/gl/GrGLDefaultInterface_native.cpp"
  "../src/gpu/gl/mac/GrGLCreateNativeInterface_mac.cpp"
  "../src/gpu/gl/win/GrGLCreateNativeInterface_win.cpp"
  "../src/gpu/gl/unix/GrGLCreateNativeInterface_unix.cpp"
  "../src/gpu/gl/iOS/GrGLCreateNativeInterface_iOS.cpp"
  "../src/gpu/gl/android/GrGLCreateNativeInterface_android.cpp"

  # Sk files
  "../include/gpu/gl/SkNativeGLContext.h"
  "../src/gpu/gl/mac/SkNativeGLContext_mac.cpp"
  "../src/gpu/gl/nacl/SkNativeGLContext_nacl.cpp"
  "../src/gpu/gl/win/SkNativeGLContext_win.cpp"
  "../src/gpu/gl/unix/SkNativeGLContext_unix.cpp"
  "../src/gpu/gl/android/SkNativeGLContext_android.cpp"
  "../src/gpu/gl/iOS/SkNativeGLContext_iOS.mm"
]

    
skgpu_mesa_gl_sources = [
  "../src/gpu/gl/mesa/GrGLCreateMesaInterface.cpp"

  # Sk files
  "../include/gpu/gl/SkMesaGLContext.h"
  "../src/gpu/gl/mesa/SkMesaGLContext.cpp"
]

    
skgpu_angle_gl_sources = [
  "../src/gpu/gl/angle/GrGLCreateANGLEInterface.cpp"

  # Sk files
  "../include/gpu/gl/SkANGLEGLContext.h"
  "../src/gpu/gl/angle/SkANGLEGLContext.cpp"
]

skgpu_debug_gl_sources = [
  "../src/gpu/gl/debug/GrGLCreateDebugInterface.cpp"
  "../src/gpu/gl/debug/GrFakeRefObj.h"
  "../src/gpu/gl/debug/GrBufferObj.h"
  "../src/gpu/gl/debug/GrBufferObj.cpp"
  "../src/gpu/gl/debug/GrFBBindableObj.h"
  "../src/gpu/gl/debug/GrRenderBufferObj.h"
  "../src/gpu/gl/debug/GrTextureObj.h"
  "../src/gpu/gl/debug/GrTextureObj.cpp"
  "../src/gpu/gl/debug/GrTextureUnitObj.h"
  "../src/gpu/gl/debug/GrTextureUnitObj.cpp"
  "../src/gpu/gl/debug/GrFrameBufferObj.h"
  "../src/gpu/gl/debug/GrFrameBufferObj.cpp"
  "../src/gpu/gl/debug/GrShaderObj.h"
  "../src/gpu/gl/debug/GrShaderObj.cpp"
  "../src/gpu/gl/debug/GrProgramObj.h"
  "../src/gpu/gl/debug/GrProgramObj.cpp"
  "../src/gpu/gl/debug/GrDebugGL.h"
  "../src/gpu/gl/debug/GrDebugGL.cpp"
  "../src/gpu/gl/debug/GrVertexArrayObj.h"

  # Sk files
  "../include/gpu/gl/SkDebugGLContext.h"
  "../src/gpu/gl/debug/SkDebugGLContext.cpp"
]

skgpu_null_gl_sources = [
  "../src/gpu/gl/GrGLCreateNullInterface.cpp"

  # Sk files
  "../include/gpu/gl/SkNullGLContext.h"
  "../src/gpu/gl/SkNullGLContext.cpp"
]

skgpu_test_sources = [
  "../src/gpu/GrTest.cpp"
  "../src/gpu/GrTest.h"
]

if (is_win) {
 skia_gpu_sources -= [ 
   "../src/gpu/gl/GrGLCreateNativeInterface_none.cpp"
   "../src/gpu/gl/GrGLDefaultInterface_none.cpp"
 ]
}