

skia_images_sources = [
  "../include/images/SkForceLinking.h"
  "../include/images/SkImageRef.h"
  "../include/images/SkImageRef_GlobalPool.h"
  "../src/images/SkJpegUtility.h"
  "../include/images/SkMovie.h"
  "../include/images/SkPageFlipper.h"

  "../src/images/bmpdecoderhelper.cpp"
  "../src/images/bmpdecoderhelper.h"

  "../src/images/SkDecodingImageGenerator.cpp"
  "../src/images/SkDecodingImageGenerator.h"
  "../src/images/SkForceLinking.cpp"
  "../src/images/SkImageDecoder.cpp"
  "../src/images/SkImageDecoder_FactoryDefault.cpp"
  "../src/images/SkImageDecoder_FactoryRegistrar.cpp"

  # If decoders are added/removed to/from (all/individual)
  # platform(s), be sure to update SkForceLinking.cpp
  # so the right decoders will be forced to link.

  # IMPORTANT: The build order of the SkImageDecoder_*.cpp files
  # defines the order image decoders are tested when decoding a
  # stream. The last decoder is the first one tested, so the .cpp
  # files should be in listed in order from the least likely to be
  # used, to the most likely (jpeg and png should be the last two
  # for instance.) As a result, they are deliberately not in
  # alphabetical order.
  "../src/images/SkImageDecoder_wbmp.cpp"
  "../src/images/SkImageDecoder_libbmp.cpp"
  "../src/images/SkImageDecoder_libgif.cpp"
  "../src/images/SkImageDecoder_libico.cpp"
  "../src/images/SkImageDecoder_libwebp.cpp"
  "../src/images/SkImageDecoder_libjpeg.cpp"
  "../src/images/SkImageDecoder_libpng.cpp"

  "../src/images/SkImageEncoder.cpp"
  "../src/images/SkImageEncoder_Factory.cpp"
  "../src/images/SkImageEncoder_argb.cpp"
  "../src/images/SkImageRef.cpp"
  "../src/images/SkImageRefPool.cpp"
  "../src/images/SkImageRefPool.h"
  "../src/images/SkImageRef_ashmem.h"
  "../src/images/SkImageRef_ashmem.cpp"
  "../src/images/SkImageRef_GlobalPool.cpp"
  "../src/images/SkImages.cpp"
  "../src/images/SkJpegUtility.cpp"
  "../src/images/SkMovie.cpp"
  "../src/images/SkMovie_gif.cpp"
  "../src/images/SkPageFlipper.cpp"
  "../src/images/SkScaledBitmapSampler.cpp"
  "../src/images/SkScaledBitmapSampler.h"
  "../src/images/SkStreamHelpers.cpp"
  "../src/images/SkStreamHelpers.h"

  "../src/ports/SkImageDecoder_CG.cpp"
  "../src/ports/SkImageDecoder_WIC.cpp"
]


if (is_win) {
  skia_images_sources -= [
    "../src/images/SkImageDecoder_FactoryDefault.cpp"
    "../src/images/SkImageDecoder_libgif.cpp"
    "../src/images/SkImageDecoder_libpng.cpp"
    "../src/images/SkMovie_gif.cpp"
  ]
}

if (!is_android) {
  skia_images_sources -= [
    "../src/images/SkImageRef_ashmem.h"
    "../src/images/SkImageRef_ashmem.cpp"
  ]
}

if (!is_ios) {
  skia_images_sources -= [
    "../src/ports/SkImageDecoder_CG.cpp"
  ]
}