
skia_opts_sources = [
  "../src/opts/opts_check_SSE2.cpp"
  "../src/opts/SkBitmapProcState_opts_SSE2.cpp"
  "../src/opts/SkBitmapFilter_opts_SSE2.cpp"
  "../src/opts/SkBlitRow_opts_SSE2.cpp"
  "../src/opts/SkBlitRect_opts_SSE2.cpp"
  "../src/opts/SkBlurImage_opts_SSE2.cpp"
  "../src/opts/SkMorphology_opts_SSE2.cpp"
  "../src/opts/SkUtils_opts_SSE2.cpp"
  "../src/opts/SkBitmapProcState_opts_SSSE3.cpp"
  "../src/opts/SkXfermode_opts_none.cpp"
]

skia_opts_ssse3_sources = [
  "../src/opts/SkBitmapProcState_opts_SSSE3.cpp"
]

# arm sources
#  "../src/opts/memset.arm.S",
#  "../src/opts/SkBitmapProcState_opts_arm.cpp",
#  "../src/opts/SkBlitMask_opts_arm.cpp",
#  "../src/opts/SkBlitRow_opts_arm.cpp",
#  "../src/opts/SkBlitRow_opts_arm.h",
#  "../src/opts/SkBlurImage_opts_arm.cpp",
#  "../src/opts/SkMorphology_opts_arm.cpp",
#  "../src/opts/SkUtils_opts_arm.cpp",
#  "../src/opts/SkXfermode_opts_arm.cpp",