
skia_pdf_sources = [
  "../include/pdf/SkPDFDevice.h"
  "../include/pdf/SkPDFDocument.h"

  "../src/pdf/SkPDFCatalog.cpp"
  "../src/pdf/SkPDFCatalog.h"
  "../src/pdf/SkPDFDevice.cpp"
  "../src/pdf/SkPDFDeviceFlattener.cpp"
  "../src/pdf/SkPDFDeviceFlattener.h"
  "../src/pdf/SkPDFDocument.cpp"
  "../src/pdf/SkPDFFont.cpp"
  "../src/pdf/SkPDFFont.h"
  "../src/pdf/SkPDFFontImpl.h"
  "../src/pdf/SkPDFFormXObject.cpp"
  "../src/pdf/SkPDFFormXObject.h"
  "../src/pdf/SkPDFGraphicState.cpp"
  "../src/pdf/SkPDFGraphicState.h"
  "../src/pdf/SkPDFImage.cpp"
  "../src/pdf/SkPDFImage.h"
  "../src/pdf/SkPDFPage.cpp"
  "../src/pdf/SkPDFPage.h"
  "../src/pdf/SkPDFResourceDict.cpp"
  "../src/pdf/SkPDFResourceDict.h"
  "../src/pdf/SkPDFShader.cpp"
  "../src/pdf/SkPDFShader.h"
  "../src/pdf/SkPDFStream.cpp"
  "../src/pdf/SkPDFStream.h"
  "../src/pdf/SkPDFTypes.cpp"
  "../src/pdf/SkPDFTypes.h"
  "../src/pdf/SkPDFUtils.cpp"
  "../src/pdf/SkPDFUtils.h"
  "../src/pdf/SkTSet.h"

  "../src/doc/SkDocument_PDF.cpp"
]

skia_pdf_viewer_lib_sources = [
  "../experimental/PdfViewer/inc/SkPdfContext.h"
  "../experimental/PdfViewer/inc/SkPdfDiffEncoder.h"
  "../experimental/PdfViewer/inc/SkPdfRenderer.h"
  "../experimental/PdfViewer/inc/SkPdfTokenLooper.h"

  "../experimental/PdfViewer/src/SkPdfContext.cpp"
  #"../experimental/PdfViewer/src/SkPdfRenderer.cpp"   TODO
  "../experimental/PdfViewer/src/SkTDStackNester.h"
  "../experimental/PdfViewer/src/SkPdfDiffEncoder.cpp"

  "../experimental/PdfViewer/SkPdfGraphicsState.cpp"
  "../experimental/PdfViewer/SkPdfFont.cpp"
  "../experimental/PdfViewer/SkPdfReporter.cpp"
  "../experimental/PdfViewer/SkPdfUtils.cpp"
   #'src/experimental/PdfViewer/SkPdfNYI.cpp"
  "../experimental/PdfViewer/SkTrackDevice.cpp"
  "../experimental/PdfViewer/SkTracker.cpp"
  #"../experimental/PdfViewer/pdfparser/native/SkPdfNativeObject.cpp"
  #"../experimental/PdfViewer/pdfparser/native/SkPdfNativeTokenizer.cpp"
  #"../experimental/PdfViewer/pdfparser/native/SkPdfNativeDoc.cpp"
  #"../experimental/PdfViewer/pdfparser/native/pdfapi/SkPdfMapper_autogen.cpp"
  #"../experimental/PdfViewer/pdfparser/native/pdfapi/SkPdfHeaders_autogen.cpp"
]