import("config.gni")

skia_ports_sources = [
  "../src/ports/SkAtomics_android.h"
  "../src/ports/SkAtomics_none.h"
  "../src/ports/SkAtomics_sync.h"
  "../src/ports/SkAtomics_win.h"
  "../src/ports/SkDebug_nacl.cpp"
  "../src/ports/SkDebug_stdio.cpp"
  "../src/ports/SkDebug_win.cpp"

  "../src/ports/SkFontHost_win.cpp"
  "../src/ports/SkFontHost_win_dw.cpp"
  "../src/ports/SkFontMgr_default_gdi.cpp"
  "../src/ports/SkFontMgr_default_dw.cpp"

  "../src/ports/SkGlobalInitialization_default.cpp"
  "../src/ports/SkMemory_malloc.cpp"
  "../src/ports/SkMutex_none.h"
  "../src/ports/SkMutex_pthread.h"
  "../src/ports/SkMutex_win.h"
  "../src/ports/SkOSFile_posix.cpp"
  "../src/ports/SkOSFile_stdio.cpp"
  "../src/ports/SkOSFile_win.cpp"
  "../src/ports/SkDiscardableMemory_none.cpp"
  "../src/ports/SkPurgeableMemoryBlock_none.cpp"
  "../src/ports/SkTime_Unix.cpp"
  "../src/ports/SkTime_win.cpp"
  #'../src/ports/SkTLS_none.cpp"
  "../src/ports/SkTLS_pthread.cpp"
  "../src/ports/SkTLS_win.cpp"
  "../src/ports/SkXMLParser_empty.cpp"
]

if (is_win) {
  skia_ports_sources -= [
    "../src/ports/SkDebug_stdio.cpp"
    "../src/ports/SkOSFile_posix.cpp"
    "../src/ports/SkTime_Unix.cpp"
    "../src/ports/SkTLS_pthread.cpp"
  ]
  if (skia_directwrite) {
    skia_ports_sources -= ["../src/ports/SkFontMgr_default_gdi.cpp"]
  } else {
    skia_ports_sources -= ["../src/ports/SkFontMgr_default_dw.cpp"]
  }
}
  